# oneDNN_sub

./: .clang-format  CMakeLists.txt  example_utils.hpp  main.cpp
